# SwarmOS

./: .env.example  .gitignore  AGENTS.md  Anchor.toml  Dockerfile.agent  LICENSE  README.md  agent.json  index.html  package.json  plan.md  railway.json  run.sh  tsconfig.json
agent/: package-lock.json  package.json  test-chain.ts  tsconfig.json
agent/src/: abis.ts  backtest.ts  chain.ts  child.ts  control-server.ts  delegation.ts  demo.ts  discovery.ts  ens.ts  filecoin.ts  ipfs.ts  judge-flow.ts  lido.ts  lineage.ts  lit.ts  logger.ts  merchant-moe.ts  parent.ts  spawn-child.ts  swarm.ts  venice.ts  verify-live-vote.ts  wallet-manager.ts
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployFilecoinCalibration.s.sol  RegisterERC8004.s.sol
contracts/src/: ChildAgent.sol  LineageRegistry.sol  SpawnFactory.sol
contracts/test/: ChildAgent.t.sol  ChildGovernor.t.sol  Integration.t.sol  ReputationRegistry.t.sol  StETHTreasury.t.sol
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/: types.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AgentCard.tsx  AgentDetailPanel.tsx  AgentFeed.tsx  AgentLivePanel.tsx  AgentTerminalFeed.tsx  AlignmentBadge.tsx  FundSwarm.tsx  (+12 more)
programs/swarm-os/: Cargo.toml
programs/swarm-os/src/: errors.rs  lib.rs
programs/swarm-os/src/instructions/: bump_generation.rs  evaluate_and_prune.rs  initialize_swarm.rs  mod.rs  respawn_successor.rs  spawn_agent.rs  submit_score.rs
programs/swarm-os/src/state/: agent.rs  lineage.rs  mod.rs  swarm.rs
tests/: swarm-os.ts
(+44 files in other folders)
