[package]
name = "swarm-os"
version = "0.1.0"
description = "SwarmOS — Darwinian AI agent swarm protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swarm_os"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
